# kaiti

./: .gitignore  A3_HYBRID_LOSS.md  CHANGELOG.md  DEV_PLAN.md  PROJECT_STATE.md  README.md  WORKTREE_BOARD.md  document.tex  main.tex  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: base.yaml  debug.yaml
configs/experiments/: B0_smoke.yaml  B10_reference_only.yaml  B11_source_mask_radius.yaml  B12_pml_profile.yaml  B13_loss_switches.yaml  B14_label_mismatch.yaml  B15_eikonal_precision.yaml  B1_media_sweep.yaml  B2_frequency_sweep.yaml  B3_grid_pml.yaml  B4_capacity.yaml  B5_optim.yaml  B6_hybrid_weights.yaml  B7_source_pos.yaml  B8_seed.yaml  B9_lap_tau_audit.yaml  C0_reference_gate.yaml  C10_channel_capacity.yaml  C11_supervision_loss_matrix.yaml  C12_optimization_budget.yaml  C13_curriculum_warm_start.yaml  C14_phase_pathology.yaml  C15_benchmark_cards.yaml  C16_neural_pml_damping_window.yaml  (+15 more)
docs/: README.md
handoffs/: A2_to_A3.txt  A3_to_A0.txt  A3_to_A4.txt  A4_to_A0.txt
notebooks/: .gitkeep
scripts/: .gitkeep  _bootstrap.py  evaluate_run.py  generate_highk_matrix.py  launch_matrix.sh  run_benchmark.py  run_matrix.py  run_matrix_from_branch.py  run_train.py  sitecustomize.py  solve_reference.py  summarize_matrix.py
src/: __init__.py  config.py
tests/: test_background.py  test_bootstrap.py  test_complex_utils.py  test_config.py  test_diff_ops.py  test_eikonal.py  test_grid.py  test_medium.py  test_model_forward.py  test_pml.py  test_reference_solver.py  test_residual.py  test_rhs.py  test_runner.py  test_tau_ops.py  test_train.py
(+52 files in other folders)
